# mepy

./: .gitignore
dafny/: BinarySearch.dfy  Conditions.dfy  FastPow.dfy  IntrinsicFP.dfy  Invariant.dfy  LinearSearch.dfy
exercises/: SHA_Ch.py  divu3.py
hs/: Golf.hs
hs/stdm/: Stdm.lhs
language/: test.ml
logic/: .gitignore
logic/ModalLogic/: .gitignore  _RocqProject  dune-project  modal-logic.opam
logic/ModalLogic/theories/: ModalD.v  ModalK.v  ModalT.v  dune
logic/SystemK/: _RocqProject  dune  dune-project  systemk.opam
logic/SystemK/theories/: dune
logic/substructural/: README.md
logic/substructural/lab1/: dune-project  inference.opam
logic/substructural/lab1/lib/: dune  federation.ml  lecture1.ml  linear.ml  ordered.ml  saturate.ml  sort.ml  state.ml  term.ml
logic/substructural/lab1/test/: dune  test.ml
logic/substructural/lab1/tex/: hw1.tex  lecnotes.sty  lmacros.tex
logic/substructural/substructural_inference/src/: Makefile  README  federation.sml  lecture1.sml  linear.sml  main-test.sml  ordered.sml  saturate.sml  sort.sml  sources.cm  sources.mlb  (+4 more)
plti/g-machine/: README.md  moon.mod.json
plti/g-machine/examples/: id.g
plti/g-machine/src/: compile.mbt  lexer.mbt  machine.mbt  moon.pkg.json  parser.mbt  syntax.mbt  top.mbt  utils.mbt
plti/recursion/: landins_knot.mbt  z-combinator.ml
plti/tiny0/: syntax.ml
plti/tiny1/: syntax.ml
prob/inference/: sum-product.py
prob/sampling/: importance_sampling.py  mcmc_hmc.py  mcmc_mh.py  mcmc_smc.py  reject_sampling.py
scripts/: compile-dev-llvm.sh  compile-release-llvm.sh  tools.sh
skills/ocaml-style/: SKILL.md
skills/ocaml-style/references/: style-spec.md
smt/: Mc91.py  Mc91_pointer.py  SHA_Maj.py  SHA_Sigma1.py  reciprocal_divide.py
smt/viper/00-prusti-demo/: 00-unreachable.rs  01-sum.rs  02-array-search.rs  Prusti.toml
smt/viper/01-using-viper/: 00-test.vpr  01-triple.vpr  02-triple.vpr  03-triple.vpr  04-triple.vpr  05-max.vpr  06-triple.vpr  07-triple.vpr  08-isqrt.vpr  09-maxsum.vpr  10-unsound.vpr
smt/viper/02-foundations/: 00-abs.vpr  01-abs.rs  02-triples.vpr  03-quintuple.vpr  05-backward.vpr  06-var.vpr  07-choice.vpr  08-mistake.vpr
smt/viper/aara/: raml-append.vpr
tt/STLC/: StlcIntrinsic.agda
tt/hm/: README.md  dune-project  hm.opam
tt/hm/lib/: display.ml  dune  infer.ml  info.ml  syntax.ml  type.ml
tt/hm/test/: dune  test.ml
tt/mltt/: README.md  moon.mod.json
(+6 files in other folders)
