opam-version: "2.0"
name: "modal-logic"
synopsis: "A Rocq formalization of normal modal logics"
description: """
Hilbert-style normal modal logics in Rocq.
"""
maintainer: "floatshadow"
authors: ["floatshadow"]

depends: [
  "coq" {= "9.1.1"}
  "dune" {>= "3.21.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
