(rocq.theory
 (name ModalLogic)
 (synopsis "Normal modal logics")
 (modules :standard)
 (flags :standard -w -notation-overridden
     -w -ambiguous-paths
     -w -redundant-canonical-projection
     -w -unknown-warning
     -w -argument-scope-delimiter
     -w -notation-incompatible-prefix)
 (theories Stdlib))
